--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="text-center">
             <img src="./static/img/construction.svg" class="h-50">
             <h1>Coming Soon</h1>
-            <p>Hendrik and friends are currently working hard building this page!</p>
-            <a href="https://www.linkedin.com/in/hendrikdemir/" class="btn btn-primary mt-3">Back to LinkedIn</a>
+            <p>St John's IT Team are currently working hard building this page!</p>
+            <a href="https://www.linkedin.com/company/sjbdcs/" class="btn btn-primary mt-3">Back to LinkedIn</a>
         </div>
     </div>
 </body>
