--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Portfolio">
-    <meta property="og:image" content="https://github.com/Directoire/under-construction-template/raw/master/demo.png">
+    <meta property="og:image" content="https://github.com/sjbdcs/under-construction-template/raw/master/demo.png">
     <title>Home · Hendrik</title>
 
     <!-- Stylesheets -->
@@ -17,7 +17,7 @@
             <img src="./static/img/construction.svg" class="h-50">
             <h1>Coming Soon</h1>
             <p>St John's IT Team are currently working hard building this page!</p>
-            <a href="https://www.linkedin.com/company/sjbdcs/" class="btn btn-primary mt-3">Back to LinkedIn</a>
+            <a href="https://beta.sjbdcs.org/" class="btn btn-primary mt-3">Test Beta</a>
         </div>
     </div>
 </body>
