--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <h1>Coming Soon</h1>
             <p>St John's IT Team are currently working hard building this page!</p>
             <a href="https://beta.sjbdcs.org/" class="btn btn-primary mt-3">Test Beta</a>
+            <p> If you have questions, please forward them to <a href="mailto:communications@sjbdcs.org" class="btn btn-primary mt-3">communications@sjbdcs.org</a>
         </div>
     </div>
 </body>
