--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="text-center">
             <img src="./static/img/construction.svg" class="h-50">
             <h1>Coming Soon</h1>
-            <p>St John's IT Team are currently working hard building this page! If you have questions, please forward them to <a href="mailto:communications@sjbdcs.org" class="btn btn-primary mt-3">communications@sjbdcs.org</a></p>
+            <p>St John's IT Team are currently working hard building this page! If you have questions, please forward them to <a href="mailto:communications@sjbdcs.org">communications@sjbdcs.org</a></p>
             <a href="https://beta.sjbdcs.org/" class="btn btn-primary mt-3">Test Beta</a>            
         </div>
     </div>
