--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="./static/img/construction.svg" class="h-50">
             <h1>Coming Soon</h1>
             <p>St John's IT Team are currently working hard building this page! If you have questions, please forward them to <a href="mailto:communications@sjbdcs.org">communications@sjbdcs.org</a></p>
-            <a href="mailto:communications@sjbdcs.org?subject="Testing Beta"" class="btn btn-primary mt-3">Test Beta?</a>            
+            <a href="mailto:communications@sjbdcs.org?subject='Testing Beta'" class="btn btn-primary mt-3">Test Beta?</a>            
         </div>
     </div>
 </body>
