--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 <body>
     <div class="container vh-100">
         <div class="text-center">
-            <img src="./static/img/construction.svg" class="h-50">
-            <b>This is the development page. You are not supposed to be here.
-            Redirecting to primary page in <span id="countdown">10</span> seconds. Go <a href="//sjbdcs.org">home</a>
-            <p>St John's IT Team are currently working hard building this page! If you have questions, please forward them to <a href="mailto:communications@sjbdcs.org">communications@sjbdcs.org</a></p>
-            <a href="https://beta.sjbdcs.org?ref=Under_Construction" class="btn btn-primary mt-3">Test Beta</a>            
+            <img src="./static/img/construction.svg" class="h-50"></br>
+            <b>This is the development page. You are not supposed to be here. Redirecting to primary page in <span id="countdown">10</span> seconds. Go <a href="//sjbdcs.org">home</a>
+            <p>If you have questions, please forward them to <a href="mailto:communications@sjbdcs.org">communications@sjbdcs.org</a></p>
+            <a href="https://sjbdcs.org?ref=beta" class="btn btn-primary mt-3">Go Home</a>            
         </div>
     </div>
     <!-- JavaScript part -->
